<?xml version="1.0"?>
<package format="2">
  <name>jimmbot_viz</name>
  <version>0.1.0</version>
  <description>Visualization configuration for mhRobotics jimmBOT Robot</description>

  <author email="m.halimi@gmail.com">Mergim Halimi</author>

  <maintainer email="m.halimi@gmail.com">Mergim Halimi</maintainer>

  <url type="website">www.mergimhalimi.com</url>
  <url type="repository">https://github.com/mh-Robotics/jimmbot_viz</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>jimmbot_description</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export />

</package>
